# cpi

./: .gitignore  WDBA 2023 stats.py  case_deadlines.py  case_docket_entries.py  case_hearings.py  case_intervals.pkl  case_metrics.pkl  case_metrics.py  cpi_stats.py  dataframes.pkl  dataframes_deadlines.pkl  dataframes_hearings.pkl  deadline_dates.pkl  green_belt_cpi_stats.py  green_belt_docket_entries.py  green_belt_elapsed_times.py  green_belt_statistics.py  process_stats.py  pyproject.toml  statistics.py  ua_dates.pkl  ua_dates.py
WDBA2023/: WDBA 2023 stats.py  wdba2023_visualizations.ipynb  wdba_stats_processed.csv
WDBA2023/data_files/: wdba_stats_processed_2022_2023Jun-04-23.csv  wdba_stats_processed_2022_Jun-04-23.csv  wdba_stats_processed_Jun-04-23.csv  (+6 more)
configuration/: config.py
data_files/: bk_appeal.csv  case_metrics.pkl  case_metrics.xlsx  civil_cases_2018-2022.csv  civil_cases_2020-2023.csv  complaints.csv  dataframes_deadlines.pkl  dataframes_hearings.pkl  deadline_dates.pkl  docket_entries.pkl  docket_entries_for_ua.pkl  dummyscr.csv  green_belt_dates.pkl  green_belt_docket_entries.pkl  green_belt_metrics.xls  green_belt_metrics.xlsx  habeas_complaints.csv  injunctions.csv  motion_2255.csv  notice_removal.csv  order_leave.csv  pro_se.csv  prose_complaints.csv  prose_merged.csv  tro.csv  ua.csv  ua_dates.pkl  wdba_stats_raw.csv
db/: dbsession.py
services/: api_connection.py  api_services.py  case_services.py  dataframe_services.py  db_services.py
test/: conftest.py  test_calculate_elapsed_times.py  test_casedeadlines.py
util/: __init__.py
(+3 files in other folders)
